; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_gnu-nat.c_show_signals_cmd.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_gnu-nat.c_show_signals_cmd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inf = type { i64, i64, i64 }

@.str = private unnamed_addr constant [13 x i8] c"show signals\00", align 1
@.str.1 = private unnamed_addr constant [48 x i8] c"The inferior process's signals %s intercepted.\0A\00", align 1
@.str.2 = private unnamed_addr constant [4 x i8] c"are\00", align 1
@.str.3 = private unnamed_addr constant [7 x i8] c"aren't\00", align 1
@.str.4 = private unnamed_addr constant [8 x i8] c"will be\00", align 1
@.str.5 = private unnamed_addr constant [9 x i8] c"won't be\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32)* @show_signals_cmd to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @show_signals_cmd(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.inf*, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = call %struct.inf* (...) @cur_inf()
  store %struct.inf* %6, %struct.inf** %5, align 8
  %7 = load i8*, i8** %3, align 8
  %8 = call i32 @check_empty(i8* %7, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0))
  %9 = load %struct.inf*, %struct.inf** %5, align 8
  %10 = getelementptr inbounds %struct.inf, %struct.inf* %9, i32 0, i32 2
  %11 = load i64, i64* %10, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %20

13:                                               ; preds = %2
  %14 = load %struct.inf*, %struct.inf** %5, align 8
  %15 = getelementptr inbounds %struct.inf, %struct.inf* %14, i32 0, i32 1
  %16 = load i64, i64* %15, align 8
  %17 = icmp ne i64 %16, 0
  %18 = zext i1 %17 to i64
  %19 = select i1 %17, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.2, i64 0, i64 0), i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.3, i64 0, i64 0)
  br label %27

20:                                               ; preds = %2
  %21 = load %struct.inf*, %struct.inf** %5, align 8
  %22 = getelementptr inbounds %struct.inf, %struct.inf* %21, i32 0, i32 0
  %23 = load i64, i64* %22, align 8
  %24 = icmp ne i64 %23, 0
  %25 = zext i1 %24 to i64
  %26 = select i1 %24, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.4, i64 0, i64 0), i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.5, i64 0, i64 0)
  br label %27

27:                                               ; preds = %20, %13
  %28 = phi i8* [ %19, %13 ], [ %26, %20 ]
  %29 = call i32 @printf_unfiltered(i8* getelementptr inbounds ([48 x i8], [48 x i8]* @.str.1, i64 0, i64 0), i8* %28)
  ret void
}

declare dso_local %struct.inf* @cur_inf(...) #1

declare dso_local i32 @check_empty(i8*, i8*) #1

declare dso_local i32 @printf_unfiltered(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
